--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Days+One&family=Nunito:wght@300&family=Palanquin+Dark:wght@700&family=Roboto&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
